# Password-Manager

./: key.key  main.py  pyproject.toml
